Intro to Apex/Let'sdothis/force-app/main/default/objects/My_Object__c/My_Object__c.object-meta.xml
<CustomObject>
    <label>My Object</label>
    <nameField>
        <displayFormat>Obj-{0000}</displayFormat>
        <label>My Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>My Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>