Intro to Apex/Let'sdothis/force-app/main/default/objects/My_Object__c/fields/First_Number_Field__c.field-meta.xml
<CustomField>
    <fullName>First_Number_Field__c</fullName>
    <inlineHelpText>Input a number less than 1000</inlineHelpText>
    <label>First Number Field</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>