Intro to Apex/Let'sdothis/force-app/main/default/objects/My_Object__c/fields/isDog__c.field-meta.xml
<CustomField>
    <fullName>isDog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDog</label>
    <type>Checkbox</type>
</CustomField>