Intro to Apex/Let'sdothis/force-app/main/default/objects/My_Object__c/fields/My_Picklist__c.field-meta.xml
<CustomField>
    <fullName>My_Picklist__c</fullName>
    <label>My Picklist</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>