Intro to Apex/Let'sdothis/force-app/main/default/objects/My_Object__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>My Objects</relationshipLabel>
    <relationshipName>My_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>