Intro to Apex/Let'sdothis/force-app/main/default/objects/My_Object__c/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <label>Types</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>isDog__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Terrier</fullName>
            </value>
            <value>
                <fullName>Sporting</fullName>
            </value>
            <value>
                <fullName>Non-Sporting</fullName>
            </value>
            <value>
                <fullName>Hound</fullName>
            </value>
            <value>
                <fullName>Calico</fullName>
            </value>
            <value>
                <fullName>Tabby</fullName>
            </value>
            <value>
                <fullName>Maincoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>